fullSandbox11072023/force-app/main/default/objects/SAPRealPriceSet__x/SAPRealPriceSet__x.object-meta.xml
<CustomObject>
    <externalDataSource>SAP_OData</externalDataSource>
    <externalName>SAPRealPriceSet</externalName>
    <label>SAPRealPriceSet</label>
    <pluralLabel>SAPRealPriceSet</pluralLabel>
</CustomObject>