fullSandbox11072023/force-app/main/default/objects/SAPRealPriceSet__x/fields/AgrDesc__c.field-meta.xml
<CustomField>
    <fullName>AgrDesc__c</fullName>
    <description>AgrDesc</description>
    <externalDeveloperName>AgrDesc</externalDeveloperName>
    <label>AgrDesc</label>
    <length>40</length>
    <type>Text</type>
</CustomField>