fullSandbox11072023/force-app/main/default/objects/SAPRealPriceSet__x/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <description>Agreement</description>
    <externalDeveloperName>Agreement</externalDeveloperName>
    <label>Agreement</label>
    <length>10</length>
    <type>Text</type>
</CustomField>