fullSandbox11072023/force-app/main/default/objects/SAPRealPriceSet__x/fields/AgrObjective__c.field-meta.xml
<CustomField>
    <fullName>AgrObjective__c</fullName>
    <description>AgrObjective</description>
    <externalDeveloperName>AgrObjective</externalDeveloperName>
    <label>AgrObjective</label>
    <length>4</length>
    <type>Text</type>
</CustomField>