fullSandbox11072023/force-app/main/default/objects/SAPRealPriceSet__x/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <description>Condition</description>
    <externalDeveloperName>Condition</externalDeveloperName>
    <label>Condition</label>
    <length>4</length>
    <type>Text</type>
</CustomField>