fullSandbox11072023/force-app/main/default/objects/SAPRealPriceSet__x/fields/DistChnl__c.field-meta.xml
<CustomField>
    <fullName>DistChnl__c</fullName>
    <description>DistChnl</description>
    <externalDeveloperName>DistChnl</externalDeveloperName>
    <label>DistChnl</label>
    <length>2</length>
    <type>Text</type>
</CustomField>