fullSandbox11072023/force-app/main/default/objects/SAPRealPriceSet__x/fields/EffDate__c.field-meta.xml
<CustomField>
    <fullName>EffDate__c</fullName>
    <description>EffDate</description>
    <externalDeveloperName>EffDate</externalDeveloperName>
    <label>EffDate</label>
    <type>DateTime</type>
</CustomField>