fullSandbox11072023/force-app/main/default/objects/SAPRealPriceSet__x/fields/ListPrice__c.field-meta.xml
<CustomField>
    <fullName>ListPrice__c</fullName>
    <description>ListPrice</description>
    <externalDeveloperName>ListPrice</externalDeveloperName>
    <label>ListPrice</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>