fullSandbox11072023/force-app/main/default/objects/SAPRealPriceSet__x/fields/MatDesc__c.field-meta.xml
<CustomField>
    <fullName>MatDesc__c</fullName>
    <description>MatDesc</description>
    <externalDeveloperName>MatDesc</externalDeveloperName>
    <label>MatDesc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>