fullSandbox11072023/force-app/main/default/objects/SAPRealPriceSet__x/fields/MrpGroup__c.field-meta.xml
<CustomField>
    <fullName>MrpGroup__c</fullName>
    <description>MrpGroup</description>
    <externalDeveloperName>MrpGroup</externalDeveloperName>
    <label>MrpGroup</label>
    <length>4</length>
    <type>Text</type>
</CustomField>