fullSandbox11072023/force-app/main/default/objects/SAPRealPriceSet__x/fields/MtrlStatus__c.field-meta.xml
<CustomField>
    <fullName>MtrlStatus__c</fullName>
    <description>MtrlStatus</description>
    <externalDeveloperName>MtrlStatus</externalDeveloperName>
    <label>MtrlStatus</label>
    <length>2</length>
    <type>Text</type>
</CustomField>