fullSandbox11072023/force-app/main/default/objects/SAPRealPriceSet__x/fields/oCustomer__c.field-meta.xml
<CustomField>
    <fullName>oCustomer__c</fullName>
    <description>oCustomer</description>
    <externalDeveloperName>oCustomer</externalDeveloperName>
    <label>oCustomer</label>
    <length>10</length>
    <type>Text</type>
</CustomField>