fullSandbox11072023/force-app/main/default/objects/SAPRealPriceSet__x/fields/oDate__c.field-meta.xml
<CustomField>
    <fullName>oDate__c</fullName>
    <description>oDate</description>
    <externalDeveloperName>oDate</externalDeveloperName>
    <label>oDate</label>
    <type>DateTime</type>
</CustomField>