fullSandbox11072023/force-app/main/default/objects/SAPRealPriceSet__x/fields/oMaterial__c.field-meta.xml
<CustomField>
    <fullName>oMaterial__c</fullName>
    <description>oMaterial</description>
    <externalDeveloperName>oMaterial</externalDeveloperName>
    <label>oMaterial</label>
    <length>18</length>
    <type>Text</type>
</CustomField>