fullSandbox11072023/force-app/main/default/objects/SAPRealPriceSet__x/fields/oSalesOrg__c.field-meta.xml
<CustomField>
    <fullName>oSalesOrg__c</fullName>
    <description>oSalesOrg</description>
    <externalDeveloperName>oSalesOrg</externalDeveloperName>
    <label>oSalesOrg</label>
    <length>4</length>
    <type>Text</type>
</CustomField>