fullSandbox11072023/force-app/main/default/objects/SAPRealPriceSet__x/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <description>Owner</description>
    <externalDeveloperName>Owner</externalDeveloperName>
    <label>Owner</label>
    <length>10</length>
    <type>Text</type>
</CustomField>