fullSandbox11072023/force-app/main/default/objects/SAPRealPriceSet__x/fields/OwnerName__c.field-meta.xml
<CustomField>
    <fullName>OwnerName__c</fullName>
    <description>OwnerName</description>
    <externalDeveloperName>OwnerName</externalDeveloperName>
    <label>OwnerName</label>
    <length>30</length>
    <type>Text</type>
</CustomField>