fullSandbox11072023/force-app/main/default/objects/SAPRealPriceSet__x/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Price</description>
    <externalDeveloperName>Price</externalDeveloperName>
    <label>Price</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>