fullSandbox11072023/force-app/main/default/objects/SAPRealPriceSet__x/fields/SalesDeal__c.field-meta.xml
<CustomField>
    <fullName>SalesDeal__c</fullName>
    <description>SalesDeal</description>
    <externalDeveloperName>SalesDeal</externalDeveloperName>
    <label>SalesDeal</label>
    <length>10</length>
    <type>Text</type>
</CustomField>