fullSandbox11072023/force-app/main/default/objects/SAPRealPriceSet__x/fields/SalesMtrlStatus__c.field-meta.xml
<CustomField>
    <fullName>SalesMtrlStatus__c</fullName>
    <description>SalesMtrlStatus</description>
    <externalDeveloperName>SalesMtrlStatus</externalDeveloperName>
    <label>SalesMtrlStatus</label>
    <length>2</length>
    <type>Text</type>
</CustomField>