fullSandbox11072023/force-app/main/default/objects/SAPRealPriceSet__x/fields/ValidFrom__c.field-meta.xml
<CustomField>
    <fullName>ValidFrom__c</fullName>
    <description>ValidFrom</description>
    <externalDeveloperName>ValidFrom</externalDeveloperName>
    <label>ValidFrom</label>
    <type>DateTime</type>
</CustomField>