fullSandbox11072023/force-app/main/default/objects/SAPRealPriceSet__x/fields/ValidTo__c.field-meta.xml
<CustomField>
    <fullName>ValidTo__c</fullName>
    <description>ValidTo</description>
    <externalDeveloperName>ValidTo</externalDeveloperName>
    <label>ValidTo</label>
    <type>DateTime</type>
</CustomField>