fullSandbox11072023/force-app/main/default/objects/SAPRealPriceSet__x/fields/Vat__c.field-meta.xml
<CustomField>
    <fullName>Vat__c</fullName>
    <description>Vat</description>
    <externalDeveloperName>Vat</externalDeveloperName>
    <label>Vat</label>
    <length>13</length>
    <type>Text</type>
</CustomField>